--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 step([$class: 'AWSEBDeploymentBuilder', applicationName: aws_application_name,
-                          environmentName: aws_environment_name, awsRegion: aws_region, credentialId: aws_credentials,versionLabelFormat: "-${BUILD_NUMBER}", rootObject: 'flask_app.zip'])
+                          environmentName: aws_environment_name, awsRegion: aws_region, credentialId: aws_credentials,versionLabelFormat: "${BUILD_NUMBER}", rootObject: 'flask_app.zip'])
                 
             }
         }
